2009-10-11  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Improve description of the various *LINK variables.
	* doc/automake.texi (Program and Library Variables): _LINK also
	receives libraries to link against.  _LINK may be generated.
	(Program Variables): Document reasons when per-target _LINK is
	used instead of LINK.
	(How the Linker is Chosen): Document how a per-target _LINK
	variable and per-target link flags override linker selection.
	* THANKS: Update.
	Report by Dave Korn against gcc/libstdc++-v3.

	Allow variable override of, rather than by, silent variables.
	When overriding variables, check the VAR_SILENT status of the
	old condition, not the new one: we allow non-silent overrides
	of silent variables (these do not hit ordering bugs in the
	automake output), but there is no use case for doing so the
	other way round.  Fixes conditional overrides of variables
	annotated AM_SUBST_NOTMAKE in configure.ac.
	* lib/Automake/Variable.pm (_check_ambiguous_condition): Check
	for VAR_SILENT in $ambig_cond not $cond.
	* tests/cond44.test, tests/cond45.test: New tests, analogous to
	cond23.test and cond24.test.
	* tests/Makefile.am: Update.
	Spotted originally in binutils/bfd.

	Fix `make clean check' for the Automake package.
	* lib/Automake/Makefile.am (SUBDIRS): Add `.' before `tests',
	so that Config.pm is built first.

	Fix in-tree `recheck' after failed test that runs `check'.
	If a test like pr401b-p.test fails for some reason, a `make
	recheck' would cause another reason for failure because it sets
	AM_MAKEFLAGS which gets propagated into the test and causes its
	`make check' to fail.
	* tests/defs.in: Also unset AM_MAKEFLAGS.

2009-10-11  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Updated code enabling Bourne-compatibility in test scripts.
	* tests/defs.in: updated the code enabling Bourne-compatibility
	mode in the shell (now it's copied from autoconf 2.64).

	Avoid leaking TEST_LOG_COMPILER in environment of test scripts.