@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 2003, 2004  Free Software Foundation, Inc.
+# Copyright (C) 2003, 2004, 2009  Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -67,6 +67,7 @@ $AUTOMAKE --copy --add-missing
 $MAKE
 
 # Now add a new directory.
+# See subdir5.test for why we shouldn't need to $sleep here.
 
 mkdir sub/maude
 cat > sub/maude/Makefile.am << 'END'
