@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 2004  Free Software Foundation, Inc.
+# Copyright (C) 2004, 2009  Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -29,8 +29,11 @@ echo AC_OUTPUT>>configure.in
 : > Makefile.am
 
 $ACLOCAL
-$AUTOCONF
+# Create Makefile.in before configure.  configure ensures files
+# generated by it or later are newer than configure, so this allows
+# us to avoid a $sleep before updating Makefile.am below.
 $AUTOMAKE
+$AUTOCONF
 
 ./configure
 $MAKE
