@@ -1,5 +1,13 @@
 2009-10-11  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	Fix race condition in werror2.test due to sanity sleep change.
+	* tests/werror2.test: Generate Makefile.in before configure so
+	that a Makefile.am update after configure has run is guaranteed
+	to be newer than Makefile.in.
+	* tests/subdir5.test: Document why this test does not need to be
+	fixed.
+	* tests/subdir8.test: Likewise.
+
 	Improve description of the various *LINK variables.
 	* doc/automake.texi (Program and Library Variables): _LINK also
 	receives libraries to link against.  _LINK may be generated.
